--- a/sass/components/_page-qialitys.scss
+++ b/sass/components/_page-qialitys.scss
@@ -16,30 +16,21 @@
   text-transform: uppercase;
   color: var(--primary-text-color);
   margin-bottom: 10px;
-  
 
-   @media screen and ( max-width: 767px){
-    text-align: center;}
-
-
-
-
+  @media screen and (max-width: 767px) {
+    text-align: center;
+  }
 }
 
 .qualitys__list {
   gap: 30px;
   list-style: none;
- 
-   @media screen and ( min-width: 768px) {
+
+  @media screen and (min-width: 768px) {
     display: flex;
     flex-wrap: wrap;
-    
-  } 
-
+  }
 }
-
-
-
 
 .qualitys__text {
   font-family: 'Roboto';
@@ -47,21 +38,17 @@
   line-height: 1.7;
   letter-spacing: 0.03em;
   color: var(--secondary-text-color);
-  
+
   margin-bottom: 30px;
 
-  @media screen and ( min-width: 768px) and(max-width: 1199px){
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
     width: 354px;
   }
 
-   @media screen and ( min-width: 1200px){
-    width: 270px;}
-  
-
-  
+  @media screen and (min-width: 1200px) {
+    width: 270px;
+  }
 }
-
-
 
 .qualitys__icon {
   height: 150px;
@@ -73,11 +60,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  @media screen and ( min-width: 768px){
-    width:354px;
+  @media screen and (min-width: 768px) {
+    width: 354px;
   }
-  
-  @media screen and ( min-width: 1200px){
+
+  @media screen and (min-width: 1200px) {
     width: 270px;
   }
 }
